<resources>
    <!-- App labels -->
    <string name="app_name">Manat</string>

    <!-- Ungrouped -->
    <string name="converter_amount_zero_text">0,00</string>
    <string name="azn_text" translatable="false">AZN</string>
    <string name="error_view_click_to_reload_text">Reload</string>

    <!-- Progress dialog strings -->
    <string name="progress_dialog_title">Please wait</string>
    <string name="progress_dialog_content">Loading</string>

    <!-- Image descriptions -->
    <string name="no_result_image_description">No result image</string>
    <string name="country_flag_image_description">Country flag</string>
    <string name="trending_image_description">Trending status image</string>
    <string name="trend_down_image_description">Rate is decreased</string>
    <string name="trend_flat_image_description">Rate does not change</string>
    <string name="trend_up_image_description">Rate is increased</string>

    <!-- Menu items -->
    <string name="menu_refresh_text">Refresh</string>
    <string name="menu_share_text">Share</string>
    <string name="menu_invite_text">Invite Friends</string>
    <string name="menu_notification_text">Notifications</string>

    <!-- Statistical info labels -->
    <string name="detail_statistics_label">"%s" Statistics</string>
    <string name="statistics_label_weekly">Weekly</string>
    <string name="statistics_label_quarterly">Quarterly</string>
    <string name="statistics_label_monthly">Monthly</string>
    <string name="statistics_label_semi_annually">Semiannually</string>
    <string name="statistics_label_yearly">Yearly</string>
    <string name="week_button_text">Week</string>
    <string name="month_button_text">Month</string>
    <string name="quarter_button_text">3 M</string>
    <string name="semi_annual_button_text">6 M</string>
    <string name="year_button_text">Year</string>
    <string name="current_rate_text">Current rate</string>
    <string name="average_rate_text">Average rate</string>
    <string name="maximum_rate_text">Maximum rate</string>
    <string name="minimum_rate_text">Minimum rate</string>

    <!-- Share rate strings -->
    <string name="share_rate_statistics_title">Share rate statistics via</string>
    <string name="share_statistics_text" formatted="false">Check out rate statistics of \"%1$s\"
        for period from %2$s till %3$s:\n
        Current rate - %4$s\n
        Average rate - %5$s\n
        Maximum rate - %6$s\n
        Minimum rate - %7$s
    </string>

    <!-- Calculator strings -->
    <string name="calc_backspace_text" translatable="false"><![CDATA[<-]]></string>
    <string name="calc_clear_text" translatable="false">C</string>
    <string name="calc_divide_text" translatable="false">/</string>
    <string name="calc_multiply_text" translatable="false">*</string>
    <string name="calc_minus_text" translatable="false">-</string>
    <string name="calc_plus_text" translatable="false">+</string>
    <string name="calc_equals_text" translatable="false">=</string>
    <string name="calc_delimiter_text" translatable="false">,</string>
    <string name="calc_1_text">1</string>
    <string name="calc_2_text">2</string>
    <string name="calc_3_text">3</string>
    <string name="calc_4_text">4</string>
    <string name="calc_5_text">5</string>
    <string name="calc_6_text">6</string>
    <string name="calc_7_text">7</string>
    <string name="calc_8_text">8</string>
    <string name="calc_9_text">9</string>
    <string name="calc_0_text">0</string>

    <!-- Error messages -->
    <string name="express_exception_message">Invalid input! Enter correct values.</string>
    <string name="arithmetical_exception_message">Invalid input! There is an arithmetic problem.
    </string>
    <string name="number_format_exception_message">Invalid input! There is a problem with the
        format of your input.</string>
    <string name="main_no_result_message">Oops, something went wrong whilst retrieving rates.
        Please try again&#8230;</string>
    <string name="widget_no_result_message">Looks like there\'s no rates to display here. Try
        checking again soon&#8230;</string>
    <string name="line_chart_no_data_text">Looks like there\'s no data to illustrate</string>
    <string name="google_play_missing_error_message">You need to download Google Play Services in
        order to be able to invite friends</string>

    <!-- Google AppInvite string resources -->
    <string name="invitation_title">Send App Invite</string>
    <string name="invitation_message">Manat is #1 currency converter app! I used it and highly
        recommend you to give it a try!</string>
    <string name="invitation_image" translatable="false">
        https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png
    </string>
    <string name="invitation_cta">Install!</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="google_play_services_error">Google Play Services Error</string>

    <!-- FCM notification strings resources -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_notification_title">Updated exchange rates</string>
    <string name="fcm_notification_body" formatted="false">New rates available for %s</string>

    <!-- Currency names -->
    <string-array name="currency_names">
        <item>US Dollar</item>
        <item>Euro</item>
        <item>British Pound Sterling</item>
        <item>Russian Ruble</item>
        <item>Turkish Lira</item>
        <item>Arab Emirates Dirham</item>
        <item>Argentine Peso</item>
        <item>Australian Dollar</item>
        <item>Brazilian Real</item>
        <item>Belarusian Ruble</item>
        <item>Canadian Dollar</item>
        <item>Swiss Franc</item>
        <item>Chilean Peso</item>
        <item>Chinese Yuan</item>
        <item>Czech Koruna</item>
        <item>Danish Krone</item>
        <item>Egyptian Pound</item>
        <item>Georgian Lari</item>
        <item>Hong Kong Dollar</item>
        <item>Indonesian Rupiah</item>
        <item>Israeli New Shekel</item>
        <item>Indian Rupee</item>
        <item>Iranian Rial</item>
        <item>Japanese Yen</item>
        <item>Kyrgyz Som</item>
        <item>Korean Won</item>
        <item>Kuwaiti Dinar</item>
        <item>Kazakhstan Tenge</item>
        <item>Lebanese Pound</item>
        <item>Moldovan Leu</item>
        <item>Mexican Peso</item>
        <item>Malaysian Ringgit</item>
        <item>Norwegian Krone</item>
        <item>New Zealand Dollar</item>
        <item>Polish Zloty</item>
        <item>Saudi Riyal</item>
        <item>Swedish Krona</item>
        <item>Singapore Dollar</item>
        <item>Tajik Somoni</item>
        <item>Turkmen Manat</item>
        <item>Taiwan Dollar</item>
        <item>Ukraine Hryvnia</item>
        <item>Uzbekistan Sum</item>
        <item>South African Rand</item>
    </string-array>

    <!-- Currency abbreviations -->
    <string-array name="currency_codes" translatable="false">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>RUB</item>
        <item>TRY</item>
        <item>AED</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>BYN</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EGP</item>
        <item>GEL</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>IRR</item>
        <item>JPY</item>
        <item>KGS</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KZT</item>
        <item>LBP</item>
        <item>MDL</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PLN</item>
        <item>SAR</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TWD</item>
        <item>UAH</item>
        <item>UZS</item>
        <item>ZAR</item>
    </string-array>
</resources>
