<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.ogasimli.manat.ui.activity.MainActivity">

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh_text"
        android:icon="@drawable/ic_reload"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_invite"
        android:title="@string/menu_invite_text"
        android:icon="@drawable/ic_invite"
        android:orderInCategory="200"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_notification"
        android:title="@string/menu_notification_text"
        android:icon="@drawable/ic_notifications_on_menu"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>
</menu>
