<?xml version="1.0" encoding="utf-8"?>
<!-- Detail Layout for Grid -->
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_gravity="center"
    app:contentPaddingLeft="@dimen/activity_horizontal_padding"
    app:contentPaddingRight="@dimen/activity_horizontal_padding"
    app:cardBackgroundColor="?colorAccent"
    app:cardElevation="@dimen/statistics_cardview_elevation">

    <android.support.v7.widget.GridLayout
        android:id="@+id/detail_additional_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        app:columnCount="2">

        <TextView
            android:id="@+id/detail_statistic_label_text_view"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textColor="?colorPrimary"
            android:text="@string/detail_statistics_label"
            android:minHeight="@dimen/statistics_label_min_height"
            android:textSize="@dimen/statistics_label_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnSpan="2"
            fontPath="@string/roboto_medium"
            tools:ignore="MissingPrefix"/>

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/current_rate_text"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:paddingBottom="@dimen/statistics_items_bottom_padding"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/detail_current_rate_textview"
            android:gravity="center_vertical"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/statistics_rates_text_size"
            android:paddingBottom="@dimen/statistics_items_bottom_padding"
            app:layout_gravity="right"
            fontPath="@string/roboto_light"
            tools:text="1.5571"
            tools:ignore="MissingPrefix,SpUsage"/>

        <TextView
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/average_rate_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:paddingBottom="@dimen/statistics_items_bottom_padding"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/detail_average_rate_textview"
            android:gravity="center_vertical"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/statistics_rates_text_size"
            android:paddingBottom="@dimen/statistics_items_bottom_padding"
            app:layout_gravity="right"
            fontPath="@string/roboto_light"
            tools:text="1.567"
            tools:ignore="MissingPrefix,SpUsage"/>

        <TextView
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/maximum_rate_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:paddingBottom="@dimen/statistics_items_bottom_padding"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>


        <TextView
            android:id="@+id/detail_max_rate_textview"
            android:gravity="center_vertical"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/statistics_rates_text_size"
            android:paddingBottom="@dimen/statistics_items_bottom_padding"
            app:layout_gravity="right"
            fontPath="@string/roboto_light"
            tools:text="1.602"
            tools:ignore="MissingPrefix,SpUsage"/>

        <TextView
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/minimum_rate_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:paddingBottom="@dimen/statistics_items_bottom_padding"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>


        <TextView
            android:id="@+id/detail_min_rate_textview"
            android:gravity="center_vertical"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/statistics_rates_text_size"
            android:paddingBottom="@dimen/statistics_items_bottom_padding"
            app:layout_gravity="right"
            fontPath="@string/roboto_light"
            tools:text="1.5571"
            tools:ignore="MissingPrefix,SpUsage"/>

    </android.support.v7.widget.GridLayout>

</android.support.v7.widget.CardView>